--- a/AppControl/app/src/main/res/layout/tarea_form.xml
+++ b/AppControl/app/src/main/res/layout/tarea_form.xml
@@ -6,13 +6,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UsuarioForm">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
-       <EditText
+
+
+
+
+
+    <EditText
         android:id="@+id/descripcion_tarea"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -109,4 +117,5 @@
         android:textColor="#fff" />
 
 </LinearLayout>
+    </ScrollView>
 </android.support.design.widget.CoordinatorLayout>
