--- a/AppControl/app/src/main/res/layout/usuario_form.xml
+++ b/AppControl/app/src/main/res/layout/usuario_form.xml
@@ -6,6 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UsuarioForm">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -97,4 +100,5 @@
         android:text="Aceptar"
         android:textColor="#fff" />
 </LinearLayout>
+    </ScrollView>>
 </android.support.design.widget.CoordinatorLayout>
